
  [ Brian Murray ]
  * debian/control: rename the main branch
  * Increase the fallback KERNEL_INITRD_SIZE so that there is room for
    commonly used modules in the initramfs subsequently some upgrades may be
    disallowed due to a lack of free space in /boot.

  [ Nick Rosbrook ]
  * Update download rates in estimated download message (LP: #1947581)

 -- Brian Murray <brian@ubuntu.com>  Fri, 28 Jan 2022 13:43:11 -0800

ubuntu-release-upgrader (1:22.04.4) jammy; urgency=medium

  [ Steve Langasek ]
  * DistUpgrade/DistUpgradeController.py: remove references to
    archive.canonical.com from sources.list on upgrade.  LP: #1959343.

  [ Brian Murray ]
  * tests/test_sources_list.py: update the tests which expected / utilized the
    archive.canonical.com partner repository.

 -- Brian Murray <brian@ubuntu.com>  Fri, 28 Jan 2022 11:39:24 -0800

ubuntu-release-upgrader (1:22.04.3) jammy; urgency=medium

  * DistUpgrade/DistUpgradeController.py: switch from using os.readlink to
    os.path.realpath when checking for the default python version. Thanks to
    Nico Schlömer. (LP: #1953135)
  * data/release-upgrades: set Prompt to lts as jammy is an LTS release.
    (LP: #1955843)

 -- Brian Murray <brian@ubuntu.com>  Wed, 05 Jan 2022 14:27:07 -0800

ubuntu-release-upgrader (1:22.04.2) jammy; urgency=medium

  [ Didier Roche ]
  * DistUpgrade/DistUpgradeQuirks.py: Only try to connect to snapd if there is
    a socket for system activation or if snapd was already running. This
    resolves failures to upgrade under WSL. (LP: #1926267)

 -- Brian Murray <brian@ubuntu.com>  Fri, 29 Oct 2021 09:59:29 -0700

ubuntu-release-upgrader (1:22.04.1) jammy; urgency=medium

  * Update for 21.10 -> 22.04.
  * debian/control: have python3-distupgrade depend on procps which provides
    pgrep. (LP: #1947333)

 -- Brian Murray <brian@ubuntu.com>  Mon, 18 Oct 2021 15:57:35 -0700

ubuntu-release-upgrader (1:21.10.8) impish; urgency=medium

  [ Olivier Tilloy ]