@@ -40,6 +40,7 @@ Depends: ${python3:Depends},
          ${misc:Depends},
          python3-update-manager (>= 1:19.04.2~),
          python3-apt (>= 0.8.5~),
+         python3-dbus,
          python3-distro-info,
          gpgv,
          lsb-release,
